# afina

./: .gitignore  CMakeLists.txt
include/afina/: Executor.h
include/afina/coroutine/: Engine.h
include/afina/network/: Server.h
src/: CMakeLists.txt  Executor.cpp  main.cpp
src/coroutine/: Engine.cpp
src/network/blocking/: ServerImpl.cpp  ServerImpl.h
src/network/nonblocking/: ServerImpl.cpp  ServerImpl.h  Utils.cpp  Worker.cpp  Worker.h
src/protocol/: Parser.h
src/storage/: MapBasedGlobalLockImpl.cpp  MapBasedGlobalLockImpl.h
test/execute/: CMakeLists.txt  ExecutorTest.cpp
test/storage/: StorageTest.cpp
